--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-scroll": "^1.7.7",
+    "styled-components": "^3.2.3"
   },
   "devDependencies": {
     "react-scripts": "1.1.1"
