--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scroll": "^1.7.7",
+    "recompose": "^0.26.0",
     "styled-components": "^3.2.3",
     "take-back-map": "git://github.com/ProgressiveHackNight/take-back-day-mapping#3feb1b731281544fec962b6360ba1eb19dbf4b60"
   },
