--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.3",
+    "material-ui": "^1.0.0-beta.39",
+    "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-scroll": "^1.7.7",
     "recompose": "^0.26.0",
     "styled-components": "^3.2.3",
-    "take-back-map": "git://github.com/ProgressiveHackNight/take-back-day-mapping#3feb1b731281544fec962b6360ba1eb19dbf4b60"
+    "take-back-map": "git://github.com/ProgressiveHackNight/take-back-day-mapping#86e092b9512c579311d51bce9aa20f3a56ccc4d1"
   },
   "devDependencies": {
     "react-scripts": "1.1.1"
