--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "express": "^4.16.3",
+    "firebase": "^4.12.1",
     "material-ui": "^1.0.0-beta.39",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.2.0",
@@ -11,8 +12,7 @@
     "react-scroll": "^1.7.7",
     "recompose": "^0.26.0",
     "styled-components": "^3.2.3",
-    "take-back-map":
-      "git://github.com/ProgressiveHackNight/take-back-day-mapping#bc709b43e38ae6d3286e4e070d11f87fb0648010"
+    "take-back-map": "git://github.com/ProgressiveHackNight/take-back-day-mapping#bc709b43e38ae6d3286e4e070d11f87fb0648010"
   },
   "devDependencies": {
     "react-scripts": "1.1.1"
