--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "firebase": "^4.12.1",
     "material-ui": "^1.0.0-beta.39",
