--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.18.2",
     "express": "^4.16.3",
+    "firebase": "^4.12.1",
     "material-ui": "^1.0.0-beta.39",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.2.0",
@@ -11,8 +13,7 @@
     "react-scroll": "^1.7.7",
     "recompose": "^0.26.0",
     "styled-components": "^3.2.3",
-    "take-back-map":
-      "git://github.com/ProgressiveHackNight/take-back-day-mapping#bc709b43e38ae6d3286e4e070d11f87fb0648010"
+    "take-back-map": "git://github.com/ProgressiveHackNight/take-back-day-mapping#aac3300078ac93de5bf5d69fa00f104a37faa772"
   },
   "devDependencies": {
     "react-scripts": "1.1.1"
@@ -20,8 +21,9 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "buildToServe": "REACT_APP_API_ENV=server react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "serve": "yarn build && node server"
+    "serve": "yarn buildToServe && node server"
   }
 }
