--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "express": "^4.16.3",
     "express-basic-auth": "^1.1.4",
     "firebase": "^4.12.1",
+    "firebase-admin": "^5.12.0",
     "material-ui": "^1.0.0-beta.39",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.2.0",
